# pixel

./: CMakeLists.txt  README.md  animated.asprite  animated.sprite  give_me_exec.sh  glass.sprite  i_want_the_executable_now.sh  main.cpp  output.picc  output.sprite  pixel.h  sprite.md  white.sprite
Frontend/: Button.gd  OptionButton.gd  PopupMenu.gd  main.gd  main.tscn  node.gd  node.tscn  project.godot  textLabel.tscn
examples/: lowLevelMain.cpp  main.cpp
include/: noise.h  pixel.h
include/A0/: pixel.h
include/A1/: .application.h.swp  application.h  game.h  keyboard.h  sprite.h
include/utilities/: background_generators.h  noise.h  sprite.h  standard_background_generators.h
utilities/: README.md
utilities/animated_sprite_cat_write/: anim_cat  anim_writer  cat.cpp  output.sprite  write.cpp
utilities/sounds/: main.cpp  sfml-app
utilities/sprite_cat_write/: cat.cpp  sprite_file_cat  sprite_file_writer
utilities/sprite_file_cat_and_write/: build.sh  cat.cpp  sprite_file_cat  sprite_file_writer  write.cpp
utilities/white_noise_generator/: .white_noise.cpp.swp  noise  picc.txt  white_noise.cpp
